external-crates/move/crates/move-package-alt/tests/data/no_path_set_for_dependency/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: TOML parse error at line 6, column 5
  |
6 | A = { }
  |     ^^^
dependency has no fields
